upd: created base api and handlers for disk test